tests/fixtures/invalid/unit_path_too_deep.gcl
// error: unit references are at most `alias.unit` (P017); module aliases are
// single segments, so a deeper path can never resolve.
param a: Length = 3218.688 m;
node bad: Length = @a -> app.units.mile;
